--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Server-side for Brain Button application intended to replace physical buttons in amateur Brain Ring games",
   "main": "server.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "jest --coverage",
     "start": "node server.js"
   },
   "repository": {
@@ -27,5 +27,10 @@
     "express": "^4.17.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7"
   }
 }
